# fc.didactum

./: README.md  fc-didactum.conf  pyproject.toml
src/fc/didactum/: cli.py
